# CR_SF_PJT

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cr_pjt/lib/cr_pjt/: robot_interface_test
install/cr_pjt/share/ament_index/resource_index/package_run_dependencies/: cr_pjt
install/cr_pjt/share/ament_index/resource_index/parent_prefix_path/: cr_pjt
install/cr_pjt/share/cr_pjt/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cr_pjt/share/cr_pjt/cmake/: ament_cmake_export_include_directories-extras.cmake  cr_pjtConfig-version.cmake  cr_pjtConfig.cmake
install/cr_pjt/share/cr_pjt/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/01_CR_PJT/cr_test/: CR_PJT 2-a.ipynb  CR_PJT 2-a_2_scan_p&p.ipynb  eye_in_hand.py  t_rvec_ee_list_refined
src/01_CR_PJT/cr_test/t_rvec_ee_list/: t_rvec_ee_list.npz
src/01_CR_PJT/cr_test/t_rvec_ee_list_1/: t_rvec_ee_list_1.npz
src/cr_pjt/: CMakeLists.txt  package.xml  setup.py
src/cr_pjt/include/cr_pjt/: robot_interface.hpp
src/cr_pjt/scripts/: ArUco_coord_extractor.py  open_manipulator_x_pickandplace.py
src/cr_pjt/src/: eyeinhandpnp.py  main.cpp  marker2base_coord_test.py  robot_interface.cpp  robot_interface_client.py  robot_interface_pytest.py  robot_interface_test.cpp  simple_setposetarget.cpp  test.ipynb  test.py
src/cr_pjt/test_files/: robot_interface.cpp  robot_interface.hpp  robot_interface_test.cpp
src/crsf_interfaces/: CMakeLists.txt  package.xml
src/crsf_interfaces/action/: MoveToNamed.action  MoveToPose.action
test_pkg/: CMakeLists.txt  package.xml
test_pkg/include/test_pkg/: robot_interface.hpp
test_pkg/src/: eyeinhandpnp.py  robot_interface.cpp  robot_interface_client.py  robot_interface_test.cpp  simple_setposetarget.cpp  test.ipynb
