<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>    
    This package provides an example for utilizing the MoveIt API with the OpenMANIPULATOR-X,
    allowing users to practice and experiment freely.
  </description>
  <maintainer email="choigh0396@gmail.com">choigh</maintainer>
  <license>Apache-2.0</license>
  <url type="website">WIP</url>
  <url type="repository">WIP</url>
  <url type="bugtracker">WIP</url>
  <author email="choigh0396@gmail.com">WIP</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp_action</depend>        
  <depend>control_msgs</depend>         
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>crsf_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
